methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: not found: type boolean
var vuBiscuit :(boolean) = false
                ^MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
  while(vuBiscuit== false){
  ^